# nitro

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
buildsystem/: conan_setup.py
docs/: PROJECT_STRUCTURE.md
modules/: CMakeLists.txt
modules/compression/: CMakeLists.txt
modules/compression/include/nitro/modules/: compression.hpp
modules/compression/src/: compression.cpp
modules/compression/src/nodes/compression/: jpegoperator.cpp  jpegoperator.hpp  pngoperator.cpp  pngoperator.hpp  zliboperator.cpp  zliboperator.hpp
modules/imcore/: CMakeLists.txt
modules/imcore/include/nitro/datatypes/: colimagedata.hpp  colimagedata_conversions.hpp  grayimagedata.hpp  grayimagedata_conversions.hpp
modules/imcore/include/nitro/modules/: imcore.hpp
modules/imcore/src/: imcore.cpp
modules/imcore/src/datatypes/: colimagedata.cpp  colimagedata_conversions.cpp  grayimagedata.cpp  grayimagedata_conversions.cpp
modules/imcore/src/gui/histogram/: histogramdockwidget.cpp  histogramdockwidget.hpp  histogramviewer.cpp  histogramviewer.hpp
modules/imcore/src/gui/imviewer/: imageviewer.cpp  imviewdockwidget.cpp  imviewdockwidget.hpp
modules/imcore/src/gui/jsonviewer/: jsonviewdockwidget.cpp  jsonviewdockwidget.hpp  jsonviewer.cpp  jsonviewer.hpp
modules/imcore/src/nodes/color/: colormap.cpp  colormap.hpp  colorspaceconvert.cpp  colorspaceconvert.hpp  immix.cpp  immix.hpp  uniformconvert.cpp  uniformconvert.hpp
modules/imcore/src/nodes/converter/: booleanmath.cpp  booleanmath.hpp  combine.cpp  combine.hpp  iminfo.cpp  iminfo.hpp  immath.cpp  immath.hpp  invert.cpp  invert.hpp  maprange.cpp  maprange.hpp  normalize.cpp  normalize.hpp  reduction.cpp  reduction.hpp  rgbtobw.cpp  rgbtobw.hpp  separate.cpp  separate.hpp
modules/imcore/src/nodes/input/: imagesourceoperator.cpp  imagesourceoperator.hpp  inputPath.cpp  inputPath.hpp  randomoperator.cpp  randomoperator.hpp  rgbinput.cpp  rgbinput.hpp
modules/imcore/src/nodes/output/: histogramviewoperator.cpp  histogramviewoperator.hpp  imageviewoperator.cpp  imageviewoperator.hpp  jsonviewoperator.cpp  jsonviewoperator.hpp  valueviewoperator.cpp  valueviewoperator.hpp
modules/imcore/src/nodes/transform/: imflip.cpp  imflip.hpp  imresize.cpp  imresize.hpp  imrotate.cpp  imrotate.hpp  imtranslate.cpp  imtranslate.hpp  matchsize.cpp  matchsize.hpp
modules/improc/: CMakeLists.txt
modules/improc/include/nitro/modules/: improc.hpp
modules/improc/src/: improc.cpp
modules/improc/src/nodes/analysis/: distancetransform.cpp  distancetransform.hpp
modules/improc/src/nodes/blur/: bilateralfilter.cpp  bilateralfilter.hpp  boxfilter.cpp  boxfilter.hpp  gaussianblur.cpp  gaussianblur.hpp
modules/improc/src/nodes/filter/: canny.cpp  canny.hpp  dctransform.cpp  dctransform.hpp  fouriershift.cpp  fouriershift.hpp  fouriertransform.cpp  fouriertransform.hpp  morphology.cpp  morphology.hpp
modules/improc/src/nodes/input/: mask.cpp  mask.hpp  structuringelement.cpp  structuringelement.hpp
modules/improc/src/nodes/quality/: flip.cpp  flip.hpp  mse.cpp  mse.hpp  psnr.cpp  psnr.hpp
modules/improc/src/nodes/quantization/: kmeans.cpp  kmeans.hpp  quantize.cpp  quantize.hpp
modules/improc/src/nodes/restoration/: denoise.cpp  denoise.hpp
modules/improc/src/nodes/segmentation/: connectedcomps.cpp  connectedcomps.hpp
modules/include/nitro/modules/: module_list.hpp.in
modules/thesis/src/gui/im3dviewer/: renderdockwidget.hpp
modules/thesis/src/nodes/compression/: compress.cpp  compress.hpp  decompress.cpp  decompress.hpp  layerremoval.cpp  layerremoval.hpp
modules/thesis/src/nodes/output/: surfaceviewoperator.cpp  surfaceviewoperator.hpp
modules/thesis/src/nodes/restoration/: resample.cpp  resample.hpp
modules/thesis/src/util/: distancefield.cpp
plugins/: CMakeLists.txt
plugins/image_metadata/: CMakeLists.txt
plugins/image_metadata/include/: image_metadata_plugin.hpp  image_metadata_plugin.json
plugins/image_metadata/resources/: resources.qrc
plugins/image_metadata/src/: image_metadata_plugin.cpp
plugins/image_metadata/src/nodes/: extract_image_metadata.cpp  extract_image_metadata.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/modules/interface/: CMakeLists.txt
src/core/modules/interface/include/nitro/core/modules/: nitromodule.hpp
src/core/nodes/: CMakeLists.txt
src/core/nodes/include/nitro/core/nodes/: categorycolors.hpp  nitronode.hpp  nitronodebuilder.hpp  node_creator.hpp  nodeoperator.hpp  nodeports.hpp  noderegistry.hpp
src/core/nodes/include/nitro/core/nodes/datatypes/: decimaldata.hpp  decimaldata_conversions.hpp  flexibledata.hpp  integerdata.hpp  integerdata_conversions.hpp  jsondata.hpp  pathdata.hpp
src/core/nodes/src/: nitronode.cpp  nitronodebuilder.cpp  nodeports.cpp  noderegistry.cpp
src/core/nodes/src/datatypes/: decimaldata.cpp  decimaldata_conversions.cpp  integerdata.cpp  integerdata_conversions.cpp  jsondata.cpp  pathdata.cpp
src/core/version/: CMakeLists.txt
src/core/version/include/nitro/: version.hpp.in
src/gui/: CMakeLists.txt
src/gui/components/: CMakeLists.txt
src/gui/components/src/: draggabletreewidget.cpp  zoombar.cpp
src/gui/nodeeditor/: CMakeLists.txt
src/gui/nodeeditor/include/nitro/gui/nodeeditor/: imgnodegraphicsview.hpp  nitrodockwidget.hpp  nodedockwidget.hpp
src/gui/nodeeditor/src/: imgnodegraphicsview.cpp  mainwindow.cpp  nitrodockwidget.cpp  nodedockwidget.cpp  stylepresets.cpp
src/util/: CMakeLists.txt
src/util/include/nitro/util/: util.hpp
src/util/src/: imgresourcereader.cpp  util.cpp
